fix: wrap children in parent span element that has styles.help if intent is help

--- a/packages/components/src/Tooltip/Tooltip.module.css
+++ b/packages/components/src/Tooltip/Tooltip.module.css
@@ -85,7 +85,7 @@
   left: var(--tooltip--offset);
 }
 
-.help {
+.help > * {
   cursor: help;
 }
 
